# maxcos

./: .env.example  .gitignore  Cargo.toml  README.md
src/: apps.rs  main.rs  proxy.rs  security.rs  store.rs  terminal.rs
static/css/: apps.css  desktop.css  login.css  macos.css  setup.css
static/js/: apps.js  desktop.js  icons.js  login.js  setup.js  wm.js
templates/: boot.html  desktop.html  login.html  setup.html
