[package]
name = "macos-sim"
version = "0.2.0"
edition = "2021"
description = "Maxcos — macOS MacBook simulator (Rust SSR)"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
askama = { version = "0.16.0", features = ["serde_json"] }
axum = { version = "0.8.9", features = ["multipart", "macros"] }
bytes = "1"
chrono = "0.4.45"
futures-util = "0.3.33"
mime_guess = "2.0.5"
mongodb = "3.8.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2"
uuid = { version = "1.24.0", features = ["v4"] }

[[bin]]
name = "macos-sim"
path = "src/main.rs"
